--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "iron-image": "PolymerElements/iron-image#^1.2.3",
     "paper-input": "PolymerElements/paper-input#^1.1.11",
     "paper-date-picker": "polymer-paper-date-picker#^1.1.4",
-    "polymerfire": "firebase/polymerfire#^0.9.3"
+    "polymerfire": "firebase/polymerfire#^0.9.3",
+    "paper-card": "PolymerElements/paper-card#^1.1.1"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
