--- a/bower.json
+++ b/bower.json
@@ -15,11 +15,10 @@
     "neon-animation": "PolymerElements/neon-animation#^1.2.3",
     "iron-image": "PolymerElements/iron-image#^1.2.3",
     "paper-input": "PolymerElements/paper-input#^1.1.11",
-    "paper-date-picker": "polymer-paper-date-picker#^1.1.4",
     "polymerfire": "firebase/polymerfire#^0.9.3",
     "paper-card": "PolymerElements/paper-card#^1.1.1",
     "paper-fab": "PolymerElements/paper-fab#^1.2.0",
-    "paper-dialog": "PolymerElements/paper-dialog#^1.0.4"
+    "paper-dialog": "PolymerElements/paper-dialog#^1.0.4",
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
