--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "paper-card": "PolymerElements/paper-card#^1.1.1",
     "paper-fab": "PolymerElements/paper-fab#^1.2.0",
     "paper-dialog": "PolymerElements/paper-dialog#^1.0.4",
+    "paper-tooltip": "PolymerElements/paper-tooltip#^1.1.2"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
